# multi-scale-turing-pattern

./: .gitignore  Cargo.toml  README.md
assets/: mov.mov  mov2.mov  mov4.mov
src/: fastblur.rs  main.rs
