[package]
name = "multiscale-turing-pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "^0.15.0"
rand = "^0.8.0"
rand_distr = "^0.4.0"
ndarray-rand = "^0.14.0"
ndarray-ndimage = "^0.4.0"
image = "^0.25.2"